--- a/favicons and text formatting/text_formatting.html
+++ b/favicons and text formatting/text_formatting.html
@@ -16,6 +16,6 @@
     <p>This is a <sub>subscript</sub> text</p>
     <p>This is a <sup>superscript</sup> text</p>
     <p>This is a <tt>monospaced</tt> text</p>
-    <p>This is a <mark style="background-color: lightgreen">normal</mark> text</p>
+    <p>This is a <mark style="background-color: lightgreen;">normal</mark> text</p>
 </body>
 </html>
