new changes made

--- a/HTML/header_and_footer/header_and_footer.html
+++ b/HTML/header_and_footer/header_and_footer.html
@@ -17,7 +17,7 @@
 
     <main>
         <h4>Check out my playlist</h4>
-        <img src="taylor.jpg"> <br>
+        <img src="taylor.jpg" alt="profile picture"> <br>
         <a href="https://www.youtube.com/watch?v=e-ORhEE9VVg">Blank Space</a> <br>
         <a href="https://www.youtube.com/watch?v=QcIy9NiNbmo">Bad Blood</a> <br>
         <a href="https://www.youtube.com/watch?v=3tmd-ClpJxA">Look what you made me do</a> <br>
@@ -30,7 +30,7 @@
         <hr>
         author : BroCode <br>
         &copy; copyright reserved <br>
-        <a href="mailto:BroCode@fake.com">BroCode@fake.com</a>
+        <small><a href="mailto:BroCode@fake.com">BroCode@fake.com</a></small>
     </footer>
 </body>
 </html>
